--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="image/patrick.png" alt="Patrick profile picture" style="width:150px;height:150px"></td>
+      <td><img src="patrick.png" alt="Patrick profile picture" style="width:150px;height:150px"></td>
       <td>
         <h1>Patrick Guan</h1>
         <p><em>Digital Marketing Specialist</em></p>
